rewrite spring-boot binding based on OpenAPI (#959)
- Split line-bot-spring-boot into `spring-boot/*`
- Rewrite line-bot-parser based on spring-boot/
- Rewrite samples based on spring-boot/
- Remove line-bot-spring-boot
- Fix checkstyle